--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+
+# Created by https://www.gitignore.io/api/node
+
+### Node ###
 # Logs
 logs
 *.log
@@ -57,3 +61,16 @@ typings/
 # dotenv environment variables file
 .env
 
+# End of https://www.gitignore.io/api/node
+
+
+# Created by https://www.gitignore.io/api/code
+
+### Code ###
+# Visual Studio Code - https://code.visualstudio.com/
+.settings/
+.vscode/
+tsconfig.json
+jsconfig.json
+
+# End of https://www.gitignore.io/api/code
