--- a/package.json
+++ b/package.json
@@ -20,6 +20,19 @@
   },
   "scripts": {
     "dev": "nodemon app.js",
-    "start": "node app.js"
+    "start": "node app.js",
+    "test": "yarn run eslint-report && yarn run eslint",
+    "eslint-report": "eslint . -f node_modules/eslint-html-reporter/reporter.js -o tests/report.html || exit 0",
+    "eslint": "eslint ."
+  },
+  "devDependencies": {
+    "apidoc": "^0.17.6",
+    "eslint": "^4.18.0",
+    "eslint-config-standard": "^11.0.0-beta.0",
+    "eslint-html-reporter": "^0.5.2",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-node": "^6.0.0",
+    "eslint-plugin-promise": "^3.6.0",
+    "eslint-plugin-standard": "^3.0.1"
   }
 }
