--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "cors": "^2.8.4",
     "dotenv": "^5.0.0",
     "express": "^4.16.2",
+    "express-jwt": "^5.3.0",
     "jsonwebtoken": "^8.1.1",
     "mongoose": "^5.0.6",
     "morgan": "^1.9.0",
     "nodemon": "^1.15.0",
-    "uid-promise": "^1.0.0"
+    "uid-promise": "^1.0.0",
+    "uuid": "^3.2.1"
   },
   "scripts": {
     "dev": "nodemon app.js",
