--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jsonwebtoken": "^8.1.1",
     "mongoose": "^5.0.6",
     "morgan": "^1.9.0",
+    "nodemailer": "^4.4.2",
     "nodemon": "^1.15.0",
     "uid-promise": "^1.0.0",
     "uuid": "^3.2.1"
