--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^5.0.0",
     "express": "^4.16.2",
     "express-jwt": "^5.3.0",
+    "helmet": "^3.11.0",
     "jsonwebtoken": "^8.1.1",
     "mongoose": "^5.0.6",
     "morgan": "^1.9.0",
