--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "author": "Filiosoft Open Source <opensource@filiosoft.com>",
   "license": "MIT",
   "dependencies": {
+    "app-root-path": "^2.0.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
@@ -14,6 +15,7 @@
     "express": "^4.16.2",
     "express-handlebars": "^3.0.0",
     "express-jwt": "^5.3.0",
+    "express-rate-limit": "^2.11.0",
     "helmet": "^3.11.0",
     "jsonwebtoken": "^8.1.1",
     "mongoose": "^5.0.6",
