--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "s3d-api",
+  "name": "maxup-api",
   "version": "0.0.1",
-  "description": "⚙ The API for s3d!",
+  "description": "⚙ The API for maxup!",
   "main": "app.js",
-  "repository": "https://github.com/filiosoft/s3d-api",
+  "repository": "filiosoft/maxup-api",
   "author": "Filiosoft Open Source <opensource@filiosoft.com>",
   "license": "MIT",
   "dependencies": {
