--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,14 @@ cache:
   yarn: true
   directories:
     - "node_modules"
+script:
+  - yarn test
+  - yarn run docs
 deploy:
   provider: pages
   skip-cleanup: true
   github-token: $GITHUB_TOKEN
-  local-dir: tests
+  local-dir: docs
   keep-history: true
   on:
     branch: master
