--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "start": "node app.js",
     "test": "yarn run eslint-report && yarn run eslint",
     "eslint-report": "eslint . -f node_modules/eslint-html-reporter/reporter.js -o tests/eslint.html || exit 0",
-    "eslint": "eslint ."
+    "eslint": "eslint .",    
+    "docs": "apidoc -i api/ -o docs/ && cp -r tests/ docs/"
   },
   "devDependencies": {
     "apidoc": "^0.17.6",
@@ -42,5 +43,10 @@
     "eslint-plugin-node": "^6.0.0",
     "eslint-plugin-promise": "^3.6.0",
     "eslint-plugin-standard": "^3.0.1"
+  },
+  "apidoc": {
+    "title": "maxup API Docs",
+    "url": "https://api.maxup.sh",
+    "sampleUrl": "https://api.maxup.sh"
   }
 }
