--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "license": "MIT",
   "dependencies": {
     "app-root-path": "^2.0.1",
+    "aws-sdk": "^2.197.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
@@ -20,6 +21,8 @@
     "jsonwebtoken": "^8.1.1",
     "mongoose": "^5.0.6",
     "morgan": "^1.9.0",
+    "multer": "^1.3.0",
+    "multer-s3": "^2.7.0",
     "nodemailer": "^4.4.2",
     "nodemailer-express-handlebars": "^3.0.0",
     "nodemon": "^1.15.0",
